--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,10 @@
 Stanford MetaTag NoBots x.x-x.x xxxx-xx-xx
 ------------------------------------------
 
+Stanford MetaTag NoBots 7.x-3.0-alpha2 2014-03-31
+-------------------------------------------------
+Initial release on 3.x branch. Rebuilt to use Features 2.x
+
 Stanford MetaTag NoBots 7.x-2.0-alpha2 2014-01-15
 -------------------------------------------------
 Initial release on 2.x branch. Re-architected to use Context to set the
